--- a/dada/templates/send_email_layout_widget.tmpl
+++ b/dada/templates/send_email_layout_widget.tmpl
@@ -9,7 +9,7 @@
 						value="default"
 						checked="checked"
 						>
-						Default
+						Full Layout
 					</label>
 					
 					
@@ -20,7 +20,7 @@
 							id="layout_minimal"
 							value="minimal"
 							>
-							Minimal
+							Minimal Layout
 						</label>
 					
 					
@@ -32,7 +32,7 @@
 							id="layout_discussion"
 							value="discussion"
 							>
-							Discussion
+							For Discussion List Messages
 						</label>
 					
 					
@@ -43,7 +43,7 @@
 							id="layout_none"
 							value="none"
 							>
-							None
+							Don't use a Layout
 						</label>
 		</div>
 	</div>
