Bridge works better, now!

--- a/dada/templates/send_email_headers_widget.tmpl
+++ b/dada/templates/send_email_headers_widget.tmpl
@@ -3,6 +3,7 @@
 
 	<div id="additional_email_headers">
 		
+<!-- tmpl_if comment -->
 		<div class="row">
 			<div class="large-1 columns">
 				<label for="From"  class="large-text-right">
@@ -32,7 +33,7 @@
 				> 
 			</div>
 		</div> 
-
+<!-- /tmpl_if -->
 		<div class="row">
 			<div class="large-1 columns">
 				<label for="Reply-To"  class="large-text-right">
