--- a/dada/templates/send_email_layout_widget.tmpl
+++ b/dada/templates/send_email_layout_widget.tmpl
@@ -7,7 +7,9 @@
 						name="layout"
 						id="layout_default"
 						value="default"
-						checked="checked"
+						<!-- tmpl_unless expr="((list_settings.group_list == 1) && (list_settings.disable_discussion_sending != 1))" --> 
+							checked="checked"
+						<!-- /tmpl_unless -->
 						>
 						Full Layout
 					</label>
@@ -31,6 +33,9 @@
 							name="layout"
 							id="layout_discussion"
 							value="discussion"
+							<!-- tmpl_if expr="((list_settings.group_list == 1) && (list_settings.disable_discussion_sending != 1))" --> 
+								checked="checked"
+							<!-- /tmpl_if -->
 							>
 							For Discussion List Messages
 						</label>
