--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -633,12 +633,12 @@ $ADMIN_MENU = [
 					-Activated  => 1,
 					},
 
-#					{
-#					-Title      => 'Email Message Templates',
-#					-Title_URL  => "$S_PROGRAM_URL?flavor=edit_type",
-#					-Function   => 'edit_type',
-#					-Activated  => 1,
-#					},
+					{
+					-Title      => 'Email Themes',
+					-Title_URL  => "$S_PROGRAM_URL?flavor=email_themes",
+					-Function   => 'email_themes',
+					-Activated  => 1,
+					},
 
 					{
 					-Title      => 'HTML Screen Templates',
