--- a/dada/templates/profile_login.tmpl
+++ b/dada/templates/profile_login.tmpl
@@ -180,7 +180,7 @@
 						<input type="hidden" name="process" value="1" > 
 						
 						<div class="row">
-							<div class="small-12 colums">
+							<div class="small-12 columns">
 								<label for="login_email">
 									Email Address
 								</label>
@@ -193,7 +193,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="small-12 colums">
+							<div class="small-12 columns">
 								<label for="login_password">
 									Password
 								</label>
@@ -205,7 +205,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="small-12 colums">
+							<div class="small-12 columns">
 								<input type="submit" class="button expand" value="Log Into Your Profile" > 
 							</div>
 						</div>
@@ -234,7 +234,7 @@
 						<input type="hidden" name="flavor" value='profile_reset_password' > 
 						
 						<div class="row">
-							<div class="small-12 colums">
+							<div class="small-12 columns">
 								<label for="reset_email">
 									Email Address
 								</label>
@@ -247,7 +247,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="small-12 colums">
+							<div class="small-12 columns">
 								<input type="submit" class="button expand" value="Reset Your Profile Password">
 							</div>
 						</div> 
@@ -270,7 +270,7 @@
 						<input type="hidden" name="flavor" value="profile_register" > 
 						
 						<div class="row">
-							<div class="small-12 colums">
+							<div class="small-12 columns">
 								<label for="register_email">
 									Email Address
 								</label>
@@ -283,7 +283,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="small-12 colums">
+							<div class="small-12 columns">
 								<label for="register_email_again" >
 									Email Address (again)
 								</label>
@@ -296,7 +296,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="small-12 colums">
+							<div class="small-12 columns">
 								<label for="register_password" >
 									Password
 								</label>
@@ -309,7 +309,7 @@
 						</div>
 						<!-- tmpl_if can_use_captcha --> 
 							<div class="row">
-								<div class="small-12 colums">
+								<div class="small-12 columns">
 									<div class="alert-box info radius">
 										Please type in the string of letters that you see in 
 										the below image into the text box:
@@ -319,7 +319,7 @@
 							</div> 
 						</div> 
 						<div class="row">
-							<div class="small-12 colums">
+							<div class="small-12 columns">
 								<input type="submit" class="button expand" value="Register a New Profile" > 
 							</div>
 						</div>
