--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -204,7 +204,7 @@
 			</div> 
 
 			<div class="row">
-				<div class="small-12 colums">
+				<div class="small-12 columns">
 					<label for="dada_files_dir_setup_auto">
 						<input type="radio" checked="checked" id="dada_files_dir_setup_auto"  name="dada_files_dir_setup" value="auto" class="radiochangeDisplayState" data-target="manual_dada_files_dir_setup" data-state="hide">
 							AUTO 
@@ -219,7 +219,7 @@
 			</div> 
 
 			<div class="row">
-				<div class="small-12 colums">
+				<div class="small-12 columns">
 					<label for="dada_files_dir_setup_manual"> 
 
 						<input 
