--- a/dada/templates/send_email_button_widget.tmpl
+++ b/dada/templates/send_email_button_widget.tmpl
@@ -113,6 +113,16 @@
 			</li>
 
 			<li>
+				<input 
+					type="button" 
+					class="button small success sendmassmailing preview" 
+					name="process" 
+					id="preview_mass_mailing"
+					value="Preview"
+				>
+			</li>
+			
+			<li>
 				<input
 					type="button" 
 					class="button small success save_msg"
@@ -153,6 +163,17 @@
 					value="Send Test"
 				>
 			</li>
+			
+			<li>
+				<input 
+					type="button" 
+					class="button small success sendmassmailing preview" 
+					name="process" 
+					id="preview_mass_mailing"
+					value="Preview"
+				>
+			</li>
+			
 			<li>
 				<input
 					type="submit"
