Unfortunately, the HTML::Scrubber module also destroys a href tags with comments in them. Boo!

--- a/dada/templates/send_url_email_html_message_form_field_widget.tmpl
+++ b/dada/templates/send_url_email_html_message_form_field_widget.tmpl
@@ -132,7 +132,7 @@
 			</label>
 		</div> 
 	</div> 	 
-
+<!-- tmpl_if comment -->
 	<div class="row">
 		<div class="small-12 columns">			 
 			<input 
@@ -146,6 +146,7 @@
 			</label>
 			</div> 
 		</div>
+<!-- /tmpl_if -->
 	</fieldset>
 </div>
 
