--- a/dada/templates/send_url_email_html_message_form_field_widget.tmpl
+++ b/dada/templates/send_url_email_html_message_form_field_widget.tmpl
@@ -104,6 +104,7 @@
 		</div>
 	</div>
 
+<!-- tmpl_if comment -->
 
 	<div class="row">
 		<div class="small-12 columns">
@@ -132,6 +133,7 @@
 			</label>
 		</div> 
 	</div> 	 
+<!-- /tmpl_if -->
 <!-- tmpl_if comment -->
 	<div class="row">
 		<div class="small-12 columns">			 
