--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -219,7 +219,7 @@
 
 		  <ul class="button-group right">
 			  <li><input type="reset"  class="button warning" value="Clear Changes"></li>
-			  <li><input type="submit"          value="Verify Address..." <!-- tmpl_if expr="((type eq 'list') && (subscription_quota_reached == 1))" --> disabled="disabled" class="button disabled"<!-- tmpl_else -->class="button success"<!-- /tmpl_if -->></li>
+			  <li><input type="submit"          value="Verify Addresses..." <!-- tmpl_if expr="((type eq 'list') && (subscription_quota_reached == 1))" --> disabled="disabled" class="button disabled"<!-- tmpl_else -->class="button success"<!-- /tmpl_if -->></li>
 		  </ul>
 
 	</form>
