--- a/dada/templates/email_themes_screen.tmpl
+++ b/dada/templates/email_themes_screen.tmpl
@@ -40,6 +40,7 @@
     <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 	<input type="hidden" name="process" value="1">
 	<input type="hidden" name="flavor"  value="email_themes">
+    <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 	
 	<div class="row">
 		
