--- a/dada/templates/email_themes_screen.tmpl
+++ b/dada/templates/email_themes_screen.tmpl
@@ -42,14 +42,14 @@
 	<input type="hidden" name="flavor"  value="email_themes">
     <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
 	
-	<div class="row">
+	<div class="row collapse">
 		
-		<div class="small-4 columns">
+		<div class="large-6 small-12 columns">
 			<label for="email_theme_name">
 				<!-- tmpl_var email_theme_name_widget -->
 			</label>
 		</div>
-		<div class="small-8 columns">
+		<div class="large-6 small-12 columns">
 			<!-- tmpl_include common_save_list_settings_buttons_widget.tmpl -->
 		</div>	
 	</div>
