--- a/dada/templates/error_captcha_challenge_failed_screen.tmpl
+++ b/dada/templates/error_captcha_challenge_failed_screen.tmpl
@@ -1,7 +1,12 @@
 <!-- begin error_unsub_invalid_email_screen.tmpl --> 
-<!-- tmpl_set name="title" value="CAPTCHA Failed." -->
+<!-- tmpl_set name="title" value="Please fill out the CAPATCHA" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
+<div class="alert-box warning radius"> 
+	<p>
+		This subscrption form requires a CAPTCHA to be solved before a submission is accepted:
+	</p>
+</div> 
 
 <!-- tmpl_var subscription_form --> 
 
