--- a/dada/templates/minimal_subscription_form.tmpl
+++ b/dada/templates/minimal_subscription_form.tmpl
@@ -16,6 +16,9 @@
 <!-- /tmpl_if --> 
 <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="ddm_<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var given_value escape=HTML -->" <!-- tmpl_if comment -->placeholder="(required)"<!-- /tmpl_if -->>
 </label>
+<!-- tmpl_if recaptcha_html --> 
+	<!-- tmpl_var recaptcha_html -->
+<!-- /tmpl_if -->
 <!-- /tmpl_loop --> 
 <!-- /tmpl_if --> 
 <!-- /tmpl_if -->
