--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -261,11 +261,13 @@ $RATE_LIMITING = {
 #---------------------------------------------------------------------#
 # CAPTCHA Options 
 
-$CAPTCHA_TYPE = '<!-- tmpl_var captcha_type default="Default" -->';
+$CAPTCHA_TYPE = 'Google_reCAPTCHA';
 $RECAPTCHA_PARAMS = {
-    public_key     => '<!-- tmpl_var captcha_reCAPTCHA_public_key -->',
-    private_key    => '<!-- tmpl_var captcha_reCAPTCHA_private_key -->',
+	on_subscribe_form =>  '<!-- tmpl_var captcha_on_subscribe_form default="0" -->',
+    public_key        =>  '<!-- tmpl_var captcha_reCAPTCHA_public_key -->',
+    private_key       =>  '<!-- tmpl_var captcha_reCAPTCHA_private_key -->',
 };
+
 $RECAPTHCA_MAILHIDE_PARAMS = {
     public_key   => '<!-- tmpl_var captcha_reCAPTCHA_Mailhide_public_key -->',
     private_key  => '<!-- tmpl_var captcha_reCAPTCHA_Mailhide_private_key -->',
