--- a/dada/templates/jquery_subscription_form_head.tmpl
+++ b/dada/templates/jquery_subscription_form_head.tmpl
@@ -6,6 +6,10 @@
 
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.dadamail.js"></script>
 
+<!-- tmpl_if captcha_on_subscribe_form -->
+	<script src='https://www.google.com/recaptcha/api.js'></script>
+<!-- /tmpl_if -->
+	
 <script type="text/javascript">
 $(document).ready(function() {
     
