--- a/dada/templates/list_template_header_code_block.tmpl
+++ b/dada/templates/list_template_header_code_block.tmpl
@@ -31,9 +31,9 @@
 	   var $dm = $.noConflict(true);
 	</script>
 <!-- /tmpl_if -->
-
-<script src='https://www.google.com/recaptcha/api.js'></script>
-
+<!-- tmpL_if captcha_on_subscribe_form -->
+	   <script src='https://www.google.com/recaptcha/api.js'></script>
+<!-- /tmpl_if -->
 
 
 <!-- tmpl_if list_settings.show_archives --> 
