--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -134,6 +134,9 @@
 					<!-- tmpl_var recaptcha_html -->
 				</div>
 			</div>
+			<!-- tmpl_if add_recaptcha_js -->
+				    <script src='https://www.google.com/recaptcha/api.js'></script>
+			<!-- /tmpl_if --> 
 		<!-- /tmpl_if -->
 		
 		<div class="row">
