--- a/dada/templates/minimal_subscription_form.tmpl
+++ b/dada/templates/minimal_subscription_form.tmpl
@@ -18,6 +18,9 @@
 </label>
 <!-- tmpl_if recaptcha_html --> 
 	<!-- tmpl_var recaptcha_html -->
+	<!-- tmpl_if add_recaptcha_js -->
+		    <script src='https://www.google.com/recaptcha/api.js'></script>
+	<!-- /tmpl_if -->
 <!-- /tmpl_if -->
 <!-- /tmpl_loop --> 
 <!-- /tmpl_if --> 
