--- a/dada/templates/view_list_screen.tmpl
+++ b/dada/templates/view_list_screen.tmpl
@@ -40,11 +40,16 @@
 
 <!-- tmpl_include view_list_modalmenu_widget.tmpl -->
 
-<div class="row">
-    <div class="small-12 columns">
-        <div id="view_list_viewport" style="width:100%"></div> 
-    </div> 
-</div>
+
+	<div class="row">
+	    <div class="small-12 columns">
+	        <div  id="view_list_viewport" style="width:100%; height:725px;">
+	        </div> 
+	    </div> 
+	</div>
+
+
+<p>&nbsp;</p>
 
 <div id="domain_break_down">
     <h3>Breakdown by Domain</h3>
