This works, now...

--- a/dada/templates/send_email_schedule_options_widget.tmpl
+++ b/dada/templates/send_email_schedule_options_widget.tmpl
@@ -11,7 +11,8 @@
     <input
 		 type="hidden" 
 		 name="schedule_html_body_checksum" 
-		 id="schedule_html_body_checksum" value=""
+		 id="schedule_html_body_checksum" 
+		 value=""
 	>
 	
 	<div class="row">
