--- a/dada/templates/send_url_email_html_message_form_field_widget.tmpl
+++ b/dada/templates/send_url_email_html_message_form_field_widget.tmpl
@@ -42,6 +42,13 @@
 </div>
 <div id="HTML_content_from_feed_url_widget">
 	<div class="row panel">
+		
+		<!-- tmpl_unless can_use_XML_FeedPP -->
+			<div class="alert-box alert radius">
+				Disabled. The following CPAN Perl module will need to be installed: XML::FeedPP. 
+			</div>
+		<!-- /tmpl_unless -->
+		
 		<div class="small-12 columns">
 			<div class="row">
 				<div class="small-12 columns">
