Making the fetch from  feed URL remember the most recent feed date, and only send messages if they're newer than that.

--- a/dada/templates/send_email_schedule_options_widget.tmpl
+++ b/dada/templates/send_email_schedule_options_widget.tmpl
@@ -15,6 +15,13 @@
 		 value=""
 	>
 	
+    <input
+		 type="hidden" 
+		 name="feed_url_most_recent_entry" 
+		 id="feed_url_most_recent_entry" 
+		 value=""
+	>
+	
 	<div class="row">
 		<div class="small-12 columns">
 			<input 
