--- a/dada/templates/plugins/bounce_handler/scorecard.tmpl
+++ b/dada/templates/plugins/bounce_handler/scorecard.tmpl
@@ -58,7 +58,7 @@
 				<!-- tmpl_loop scorecard --> 
 					<tr>
 						<td>
-							<a href="<!-- tmpl_var Plugin_URL -->?prm=cgi_bounce_score_search&amp;query=<!-- tmpl_var email ESCAPE="URL" -->&chrome=0" title="<!-- tmpl_var email ESCAPE="HTML" -->" class="modalbox">
+							<a href="<!-- tmpl_var Plugin_URL -->&prm=cgi_bounce_score_search&amp;query=<!-- tmpl_var email ESCAPE="URL" -->&chrome=0" title="<!-- tmpl_var email ESCAPE="HTML" -->" class="modalbox">
 								<!-- tmpl_var email -->
 							</a>
 						</td>
