Login Image? Really?

--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -213,7 +213,7 @@
  			class="medium-text-right"
  			for="logo_image_url"
  		>
-			Login Image URL <br>(200px by 50px)
+			Logo Image URL <br>(200px by 50px)
  		</label>
  	</div>
  	<div class="large-9 medium-9 columns">
