--- a/dada/templates/send_url_email_html_message_form_field_widget.tmpl
+++ b/dada/templates/send_url_email_html_message_form_field_widget.tmpl
@@ -35,7 +35,7 @@
 			class="toggle_send_url_options"
 		>
 		<label for="content_from_feed_url">
-			Grab content from a RSS/Atom feed
+			Grab content from an RSS/Atom feed
 		</label>
 	</div>
 </div>
