Trying to make this all a little cleaner.

--- a/dada/installer-disabled/templates/install_or_upgrade.tmpl
+++ b/dada/installer-disabled/templates/install_or_upgrade.tmpl
@@ -116,6 +116,24 @@
 
 </form>
 </fieldset> 
+
+
+<p class="text-right">
+	<a 
+		class="button info small" 
+		target="_blank" 
+		href="http://dadamailproject.com/d/install_dada_mail.pod.html"
+	>
+		Learn how to install <!-- tmpl_var PROGRAM_NAME -->...
+	</a>
+</p>
+
+
+
+
+
+
+
 		</div>
 	</div>
 
