--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -635,6 +635,13 @@
 		Show/Hide Advanced Options...
 </button>
 
+
+<p class="text-right">
+	<a class="button info small" target="_blank" href="http://dadamailproject.com/d/install_dada_mail-advanced_configuration.pod.html">
+		Learn More About Advanced Options...
+	</a>
+</p>
+
 <div id="advanced_options">
 		<fieldset> 
 			<legend>Plugins/Extensions  [
@@ -2134,7 +2141,7 @@
 		</div> 
 
 
-		<input type="submit" value="&#187; Configure  <!-- tmpl_var PROGRAM_NAME -->! &#171;" class="success large button expand"> 
+		<input type="submit" value="Configure  <!-- tmpl_var PROGRAM_NAME -->" class="success large button expand"> 
 
 		</form> 
 	</div>
