--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -117,7 +117,7 @@
 
 <p><!-- tmpl_var PROGRAM_NAME --> will not be enabled 
 	without this directory being removed or renamed. 
-	Click the botton below to rename this directory:
+	Click the button below to rename this directory:
 </p> 
 
 <form> 
