--- a/dada/templates/list_archive_screen.tmpl
+++ b/dada/templates/list_archive_screen.tmpl
@@ -138,7 +138,7 @@
 
 				<li style="list-style:none">
 					<a 
-						href="http://dancingindigochild.local/cgi-bin/dada/mail.cgi/file_attachment/<!-- tmpl_var list -->/<!-- tmpl_var id -->/<!-- tmpl_var uriescape_name -->/"
+						href="<!-- tmpl_var PROGRAM_URL -->/file_attachment/<!-- tmpl_var list -->/<!-- tmpl_var id -->/<!-- tmpl_var uriescape_name -->/"
 						class="button"
 					>
 						<!-- tmpl_var name escape="HTML"-->
