--- a/dada/templates/view_list_table_widget.tmpl
+++ b/dada/templates/view_list_table_widget.tmpl
@@ -151,7 +151,7 @@
 					<a class="tiny button resend_confirmation_email"
 						title="Resend Confirmation Email"
 						data-list="<!-- tmpl_var list escape="HTML" -->"
-						data-email="<!-- tmpl_var email escape="HTML" -->"
+						data-email="<!-- tmpl_var email escape="URL" -->"
 					
 					>
 						<i class="fi-plus"></i>
