Fixing spelling mistake

--- a/dada/templates/error_captcha_challenge_failed_screen.tmpl
+++ b/dada/templates/error_captcha_challenge_failed_screen.tmpl
@@ -4,7 +4,7 @@
 
 <div class="alert-box warning radius"> 
 	<p>
-		This subscrption form requires a CAPTCHA to be solved before a submission is accepted:
+		This subscription form requires a CAPTCHA to be solved before a submission is accepted:
 	</p>
 </div> 
 
